# Kartograf

./: .flake8  .gitignore  CLAUDE.md  DEVELOPMENT_STANDARDS.md  LICENSE  PROGRESS.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: CHANGELOG.md  IMPLEMENTATION_PROMPT.md  PRD.md  PROGRESS.md  SCOPE.md
kartograf/: __init__.py
kartograf/auth/: __init__.py  client.py  proxy.py
kartograf/cli/: commands.py
kartograf/core/: __init__.py  sheet_parser.py
kartograf/download/: manager.py  storage.py
kartograf/hydrology/: __init__.py  hsg.py
kartograf/landcover/: __init__.py  manager.py
kartograf/providers/: __init__.py  base.py  bdot10k.py  corine.py  gugik.py  landcover_base.py  soilgrids.py
src/kartograf/: __init__.py  exceptions.py
src/kartograf/cli/: __init__.py  commands.py
src/kartograf/core/: __init__.py  sheet_parser.py
src/kartograf/download/: __init__.py
src/kartograf/providers/: base.py  gugik.py
tests/: __init__.py  conftest.py  test_cli.py  test_download_manager.py  test_gugik_provider.py  test_hsg.py  test_integration.py  test_landcover.py  test_sheet_parser.py  test_soilgrids.py  test_storage.py
