[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kartograf"
version = "0.3.0"
description = "Tool for downloading NMT (Digital Terrain Model) data from GUGiK"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Piotr", email = "piotr@example.com"}
]
keywords = ["nmt", "dem", "gugik", "gis", "terrain", "geodata"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "requests>=2.31.0",
    "pyproj>=3.6.0",
    "PyJWT[crypto]>=2.8.0",
]

[project.scripts]
kartograf = "kartograf.cli.commands:main"

[project.urls]
Homepage = "https://github.com/Daldek/Kartograf"
Repository = "https://github.com/Daldek/Kartograf.git"
Issues = "https://github.com/Daldek/Kartograf/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[tool.coverage.run]
source = ["kartograf"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
